--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta
+    <meta charset="utf-8">
+    <title>Gorg's cool website</title>
   </head>
   <body>
+    this is a test.
   </body>
 </html
