--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Gorg's cool website</title>
   </head>
-  <body>
-    this is a test.
+  <body style="background-color: #201D1E;">
+    <h1 style="color: #40BFFF;">Welcome to my website (:</h1><hr>
+    <hr><small style="color: #40BFFF;"><sub>hi theo btw lol</sub></small>
   </body>
 </html
