--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Gorg's cool website</title>
+    <link rel = "icon" href = "favicon.ico"> 
   </head>
   <body style="background-color: #201D1E;">
     <h1 style="color: #40BFFF;">Welcome to my website (:</h1><hr>
