--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="utf-8">
     <title>Gorg's cool website</title>
     <link rel="icon" href="favicon.ico">
+    <style>       
+    hr{
+        height: 1px;
+        background-color: #40BFFF;
+        border: none;
+    }
+    p {
+	  animation: color-change 1s infinite;
+	}
+
+	@keyframes color-change {
+	  0% { color: #4b0082; }
+	  50% { color: #bf66ff; }
+	  100% { color: #4b0082; }
+	}
+
+	</style>
   </head>
-  <body style="background-color: #201D1E;">
-    <h1 style="color: #40BFFF;">Welcome to my website (:</h1><hr>
-    <hr><small style="color: #40BFFF;"><sub>hi theo btw lol</sub></small>
+  <body style="background-image: url(https://wallpapercave.com/wp/wp5921640.jpg)">
+    <h1 style="color: #40BFFF;">Welcome to my website (:</h1>
+    <hr>
+    <a href="https://sites.google.com/site/unblockedgameswtf/" target="_blank"><h3><p>unblocked games o:</p></h3></a>
+    <a href="https://html-online.com/editor/" target="_blank"><h3><p>html editor pog</p></h3></a>
+    <a href="https://unblocked-pw.github.io/" target="_blank"><h3><p>unblockit (best for streaming)</p></h3></a>
+    <a href="https://proxybay.ltda/" target="_blank"><h3><p>yarrr (the <strike>pirate</strike> proxy bay (; )</p></h3></a>
+    <hr>
+    <p>deadpool 2 (((;</p>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/aEjR9ORivfk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <hr>
+    <small style="color: #40BFFF;"><sub>hi theo btw lol</sub></small>
   </body>
 </html
