--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <a href="https://html-online.com/editor/" target="_blank"><h3><p>html editor pog</p></h3></a>
     <a href="https://unblocked-pw.github.io/" target="_blank"><h3><p>unblockit (best for streaming)</p></h3></a>
     <a href="https://proxybay.ltda/" target="_blank"><h3><p>yarrr (the <strike>pirate</strike> proxy bay (; )</p></h3></a>
-    <a href="space.html" target"_blank"><h3><p>space website</p></h3></a>
-    <a href="logicgates.html" target"_blank"><h3><p>logic gates</p></h3></a>
-    <a href="frog.html" target"_blank"><h3><p>frog</p></h3></a>
+    <a href="space.html"><h3><p>space website</p></h3></a>
+    <a href="logicgates.html"><h3><p>logic gates</p></h3></a>
+    <a href="frog.html"><h3><p>frog</p></h3></a>
     <hr>
     <p>deadpool 2 (((;</p>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/aEjR9ORivfk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
