--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
 	  0% { color: #4b0082; }
 	  50% { color: #bf66ff; }
 	  100% { color: #4b0082; }
-	}
-     all{
-	    font-family: Arial, Helvetica, sans-serif;
 	    }
 	</style>
   </head>
-  <body style="background-image: url(https://wallpapercave.com/wp/wp5921640.jpg)" class="all">
+  <body style="background-image: url(https://wallpapercave.com/wp/wp5921640.jpg)" style="font-family: Arial, Helvetica, sans-serif">
     <h1 style="color: #40BFFF;">Welcome to my website (:</h1>
     <hr>
     <a href="https://sites.google.com/site/unblockedgameswtf/" target="_blank"><h3><p>unblocked games o:</p></h3></a>
